--- a/Real Time Clock/.project
+++ b/Real Time Clock/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RTC</name>
+	<name>Real Time Clock</name>
 	<comment></comment>
 	<projects>
 	</projects>
